QQ-763 -fixed staring issue on mobile devices

--- a/source/styles/_deal-detail.scss
+++ b/source/styles/_deal-detail.scss
@@ -144,7 +144,7 @@
         @include fa(star);
         @include fa-size(3.5rem);
       }
-      &.active, &:hover {
+      &.active{
         color: $col-blue;
       }
     }
